examples/should-fail/f06_non_sort_family.lean
def demo_bad_non_sort_family : (A : Type) -> (x : A) -> x :=
  fun (A : Type) (x : A) => x
